create navigation button for small screen device

--- a/css/_global.sass
+++ b/css/_global.sass
@@ -37,10 +37,11 @@
     margin: 0
     padding: 0
     box-sizing: border-box
+html
+    scroll-behavior: smooth
 body
     font-family: MyriadPro, sans-serif
     background-color: #ffffff
-    scroll-behavior: smooth
 header
     background-color: #ffffff
     height: 60px
