fix again on the compatibility

--- a/css/style.sass
+++ b/css/style.sass
@@ -157,6 +157,15 @@ main
                 font-size: 45px
             +forTablet
                 font-size: 53px
+        h1
+            font-size: 60px
+            text-transform: uppercase
+            color: #ffffff
+            text-align: center
+            +forPhoneOnly
+                font-size: 45px
+            +forTablet
+                font-size: 53px
         .fontMyriadProBold
             font-family: MyriadProBold
         .fontMyriadProLight
