--- a/css/style.css
+++ b/css/style.css
@@ -444,6 +444,25 @@ main .slideWrapper h2 {
   }
 }
 
+main .slideWrapper h1 {
+  font-size: 60px;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-align: center;
+}
+
+@media (max-width: 599px) {
+  main .slideWrapper h1 {
+    font-size: 45px;
+  }
+}
+
+@media (min-width: 600px) and (max-width: 1199px) {
+  main .slideWrapper h1 {
+    font-size: 53px;
+  }
+}
+
 main .slideWrapper .fontMyriadProBold {
   font-family: MyriadProBold;
 }
